# mrcp-plugin-with-freeswitch

unimrcp-1.8.0/: Makefile.in  aclocal.m4  configure  configure.ac
unimrcp-1.8.0/conf/: Makefile.in
unimrcp-1.8.0/data/: Makefile.in
unimrcp-1.8.0/docs/dox/html/: annotated.html  apt_8h.html  apt_8h__dep__incl.dot  apt_8h__dep__incl.md5  apt_8h__incl.dot  apt_8h__incl.md5  apt_8h_source.html  apt__consumer__task_8h.html  apt__consumer__task_8h__incl.dot  apt__consumer__task_8h__incl.md5  apt__consumer__task_8h_source.html  apt__cyclic__queue_8h.html  apt__cyclic__queue_8h__incl.dot  apt__cyclic__queue_8h__incl.md5  apt__cyclic__queue_8h_source.html  apt__dir__layout_8h.html  apt__dir__layout_8h__dep__incl.dot  apt__dir__layout_8h__dep__incl.md5  apt__dir__layout_8h__incl.dot  apt__dir__layout_8h__incl.md5  apt__dir__layout_8h_source.html  apt__header__field_8h.html  apt__header__field_8h__dep__incl.dot  apt__header__field_8h__dep__incl.md5  apt__header__field_8h__incl.dot  apt__header__field_8h__incl.md5  apt__header__field_8h_source.html  apt__log_8h.html  apt__log_8h__dep__incl.dot  apt__log_8h__dep__incl.md5  apt__log_8h__incl.dot  apt__log_8h__incl.md5  apt__log_8h_source.html  apt__multipart__content_8h.html  apt__multipart__content_8h__incl.dot  apt__multipart__content_8h__incl.md5  apt__multipart__content_8h_source.html  apt__net_8h.html  apt__net_8h__incl.dot  apt__net_8h__incl.md5  (+1179 more)
unimrcp-1.8.0/docs/ea/: blank.htm  index.htm
unimrcp-1.8.0/docs/ea/EARoot/: EA1.htm  EA2.htm  EA3.htm  EA4.htm  EA5.htm
unimrcp-1.8.0/libs/: Makefile.in
unimrcp-1.8.0/libs/apr-toolkit/: Makefile.in
unimrcp-1.8.0/libs/mpf/: Makefile.in
unimrcp-1.8.0/libs/mrcp/: Makefile.in
unimrcp-1.8.0/libs/mrcp-client/: Makefile.in
unimrcp-1.8.0/libs/mrcp-engine/: Makefile.in
unimrcp-1.8.0/libs/mrcp-server/: Makefile.in
unimrcp-1.8.0/libs/mrcp-signaling/: Makefile.in
unimrcp-1.8.0/libs/mrcpv2-transport/: Makefile.in
unimrcp-1.8.0/libs/uni-rtsp/: Makefile.in
unimrcp-1.8.0/modules/: Makefile.in
unimrcp-1.8.0/modules/mrcp-sofiasip/: Makefile.in
unimrcp-1.8.0/modules/mrcp-unirtsp/: Makefile.in
unimrcp-1.8.0/plugins/: Makefile.am  Makefile.in
unimrcp-1.8.0/plugins/ali-recog/: Makefile.am
unimrcp-1.8.0/plugins/ali-recog/src/: ali_recog_engine.cpp
unimrcp-1.8.0/plugins/ali-synth/: Makefile.am
unimrcp-1.8.0/plugins/demo-recog/: Makefile.in
unimrcp-1.8.0/plugins/demo-synth/: Makefile.in
unimrcp-1.8.0/plugins/demo-verifier/: Makefile.in
unimrcp-1.8.0/plugins/mrcp-recorder/: Makefile.in
unimrcp-1.8.0/tests/: Makefile.in
unimrcp-1.8.0/tests/apttest/: Makefile.in
unimrcp-1.8.0/tests/mpftest/: Makefile.in
unimrcp-1.8.0/tests/mrcptest/: Makefile.in
unimrcp-1.8.0/tests/rtsptest/: Makefile.in
unimrcp-1.8.0/tests/strtablegen/: Makefile.in
(+684 files in other folders)
